--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -69,7 +69,7 @@
         android:paddingTop="5dp">
 
         <Button
-            android:id="@+id/ask"
+            android:id="@+id/done"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
