--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -52,7 +52,7 @@
         android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/rvBilling"
+            android:id="@+id/rvDetail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" />
