add bahan dialog

--- a/app/src/main/res/layout/activity_makanan.xml
+++ b/app/src/main/res/layout/activity_makanan.xml
@@ -52,9 +52,9 @@
         android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/rvDetail"
+            android:id="@+id/rvMakanan"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" />
 
     </ScrollView>
