--- a/app/src/main/res/layout/each_makanan.xml
+++ b/app/src/main/res/layout/each_makanan.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    android:padding="7dp">
 
 
     <TextView
@@ -12,7 +13,6 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
         android:text="Burger"
         android:textColor="#000000"
         android:textSize="16sp" />
