--- a/app/src/main/res/layout/dialogue_bahan.xml
+++ b/app/src/main/res/layout/dialogue_bahan.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
 
@@ -47,7 +47,6 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
             android:layout_weight="1">
 
             <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -66,7 +65,6 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:text="ok"
         android:textColor="#FFFFFF"
