--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,10 @@
         android:title="Search"
         app:showAsAction="always|collapseActionView" />
 
+    <item
+        android:id="@+id/logout"
+        android:orderInCategory="0"
+        android:title="Log out"
+        app:showAsAction="always" />
+
 </menu>
