--- a/app/src/main/res/layout/dialogue_keterangan.xml
+++ b/app/src/main/res/layout/dialogue_keterangan.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
@@ -21,9 +22,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Hello world"
             android:textColor="#000000"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tool:text="Hello world" />
 
     </android.support.v7.widget.CardView>
 
@@ -36,7 +37,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="50dp"
         android:background="@color/colorPrimary"
-        android:text="ok"
+        android:text="@string/ok"
         android:textColor="#FFFFFF"
         android:textSize="15sp" />
 
