--- a/app/src/main/res/layout/each_bahan.xml
+++ b/app/src/main/res/layout/each_bahan.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
@@ -12,11 +13,11 @@
         android:id="@+id/ingredient"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_weight="1"
-        android:layout_marginLeft="10dp"
-        android:text="Daging Sapi"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        tool:text="Daging Sapi" />
 
 
     <TextView
@@ -25,9 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="5"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        tool:text="5" />
 
 
 </LinearLayout>
