--- a/app/src/main/res/layout/each_makanan.xml
+++ b/app/src/main/res/layout/each_makanan.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
@@ -10,12 +11,12 @@
         android:id="@+id/judul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:text="Burger"
+        android:layout_marginStart="10dp"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        tool:text="Burger" />
 
 
     <TextView
@@ -23,17 +24,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="0"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        tool:text="0" />
 
 
     <CheckBox
         android:id="@+id/check_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp" />
 
 
 </RelativeLayout>
