--- a/app/src/main/res/layout/each_order.xml
+++ b/app/src/main/res/layout/each_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp">
@@ -24,38 +25,35 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:text="Meja 1"
+                android:layout_marginStart="5dp"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tool:text="Meja 1" />
 
 
             <TextView
                 android:id="@+id/date_order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:layout_below="@id/no_table"
-                android:layout_marginRight="3dp"
-                android:text="11.30, 25/10/17"
-                android:textSize="15sp" />
+                android:layout_marginEnd="3dp"
+                android:textSize="15sp"
+                tool:text="11.30, 25/10/17" />
 
             <TextView
                 android:id="@+id/items"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_below="@id/date_order"
-                android:layout_marginRight="3dp"
+                android:layout_marginEnd="3dp"
                 android:layout_marginTop="5dp"
-                android:text="8 items"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                tool:text="8 items" />
 
         </RelativeLayout>
-
-
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
