--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,13 +5,13 @@
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_action_search"
-        android:title="Search"
+        android:title="@string/search"
         app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/logout"
         android:orderInCategory="0"
-        android:title="Log out"
+        android:title="@string/logout_menu"
         app:showAsAction="always" />
 
 </menu>
