--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@string/version"
+            android:text="@string/label_version"
             android:textColor="@android:color/white"
             android:textSize="15sp" />
 
@@ -44,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="10dp"
-            android:hint="@string/user"
+            android:hint="@string/hint_user"
             android:inputType="text"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white" />
@@ -53,7 +52,7 @@
             android:id="@+id/edPassword"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:hint="@string/pass"
+            android:hint="@string/hint_pass"
             android:inputType="textPassword"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white" />
@@ -65,7 +64,7 @@
             android:layout_marginTop="20dp"
             android:background="@android:color/darker_gray"
             android:onClick="login"
-            android:text="@string/login"
+            android:text="@string/button_login"
             android:textAllCaps="true"
             android:textSize="15sp" />
     </LinearLayout>
