--- a/app/src/main/res/layout/activity_makanan.xml
+++ b/app/src/main/res/layout/activity_makanan.xml
@@ -15,10 +15,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:text="@string/item_name"
+            android:layout_marginStart="10dp"
+            android:text="@string/label_item_name"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/qty"
+            android:text="@string/label_qty"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
@@ -35,10 +35,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:text="@string/done"
+            android:layout_marginEnd="10dp"
+            android:text="@string/label_done"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
@@ -60,23 +60,13 @@
     </ScrollView>
 
 
-    <LinearLayout
+    <Button
+        android:id="@+id/done"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp">
-
-        <Button
-            android:id="@+id/done"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/done_all" />
-
-
-    </LinearLayout>
+        android:text="@string/button_done_all"
+        android:textColor="#FFFFFF" />
 
 
 </LinearLayout>
