--- a/app/src/main/res/layout/dialogue_bahan.xml
+++ b/app/src/main/res/layout/dialogue_bahan.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
@@ -26,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/ingredient"
+                android:text="@string/label_ingredient"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
@@ -36,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/grams"
+                android:text="@string/label_grams"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
@@ -64,9 +63,8 @@
         android:id="@+id/ok"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_centerHorizontal="true"
         android:background="@color/colorPrimary"
-        android:text="ok"
+        android:text="@string/button_ok"
         android:textColor="#FFFFFF"
         android:textSize="15sp" />
 
