--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/note"
         android:icon="@mipmap/ic_note"
-        android:title="@string/note"
+        android:title="@string/menu_note"
         app:showAsAction="always|collapseActionView" />
 
 </menu>
