--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,13 +5,7 @@
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_action_search"
-        android:title="@string/search"
+        android:title="@string/menu_search"
         app:showAsAction="always|collapseActionView" />
-
-    <item
-        android:id="@+id/logout"
-        android:orderInCategory="0"
-        android:title="@string/logout_menu"
-        app:showAsAction="always" />
 
 </menu>
