--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -97,7 +97,6 @@
                 android:id="@+id/tanggal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:background="@color/colorPrimary"
                 android:paddingBottom="10dp"
                 android:textAlignment="center"
@@ -105,15 +104,22 @@
                 android:textSize="15sp"
                 tool:text="Pesanan Rabu, 15 Desember 2017" />
 
-
-            <TextView
+            <RelativeLayout
                 android:id="@+id/no_food"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/label_no_food"
-                android:textAlignment="center"
-                android:visibility="gone" />
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/label_no_food"
+                    android:textAlignment="center" />
+
+            </RelativeLayout>
+
 
             <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/rvOrder"
@@ -121,6 +127,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
 
-        </RelativeLayout>
+        </LinearLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
