--- a/app/src/main/res/layout/each_makanan.xml
+++ b/app/src/main/res/layout/each_makanan.xml
@@ -6,36 +6,27 @@
     android:background="@color/colorPrimaryDark"
     android:padding="7dp">
 
-
     <TextView
         android:id="@+id/judul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
         android:textColor="#000000"
         android:textSize="16sp"
         tool:text="Burger" />
-
 
     <TextView
         android:id="@+id/qty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
         android:textColor="#000000"
         android:textSize="16sp"
+        android:layout_marginEnd="16dp"
         tool:text="0" />
-
-
-    <CheckBox
-        android:id="@+id/check_done"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10dp" />
-
 
 </RelativeLayout>
 
