--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,10 +32,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
             android:text="@string/label_version"
             android:textColor="@android:color/white"
-            android:textSize="15sp" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edUsername"
@@ -46,7 +48,8 @@
             android:hint="@string/hint_user"
             android:inputType="text"
             android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+            android:textColorHint="@android:color/white"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/edPassword"
@@ -55,18 +58,20 @@
             android:hint="@string/hint_pass"
             android:inputType="textPassword"
             android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+            android:textColorHint="@android:color/white"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/login"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="170dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="50dp"
             android:background="@android:color/darker_gray"
             android:onClick="login"
+            android:padding="20dp"
             android:text="@string/button_login"
             android:textAllCaps="true"
-            android:textSize="15sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 </RelativeLayout>
