--- a/app/src/main/res/layout/dialogue_bahan.xml
+++ b/app/src/main/res/layout/dialogue_bahan.xml
@@ -27,7 +27,7 @@
                 android:gravity="center"
                 android:text="@string/label_ingredient"
                 android:textColor="#FFFFFF"
-                android:textSize="16sp" />
+                android:textSize="20sp" />
 
 
             <TextView
@@ -37,7 +37,7 @@
                 android:gravity="center"
                 android:text="@string/label_grams"
                 android:textColor="#FFFFFF"
-                android:textSize="16sp" />
+                android:textSize="20sp" />
 
 
         </LinearLayout>
@@ -62,10 +62,11 @@
     <Button
         android:id="@+id/ok"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="@string/button_ok"
         android:textColor="#FFFFFF"
-        android:textSize="15sp" />
+        android:padding="10dp"
+        android:textSize="20sp" />
 
 </LinearLayout>
