--- a/app/src/main/res/layout/each_order.xml
+++ b/app/src/main/res/layout/each_order.xml
@@ -9,15 +9,17 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_vertical"
         android:layout_margin="5dp"
+        android:minHeight="100dp"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="6dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp">
+            android:gravity="center_vertical"
+            android:padding="30dp">
 
 
             <TextView
@@ -27,7 +29,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
                 android:textColor="#000000"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 tool:text="Meja 1" />
 
@@ -40,7 +42,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_below="@id/no_table"
                 android:layout_marginEnd="3dp"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 tool:text="11.30, 25/10/17" />
 
             <TextView
@@ -51,7 +53,7 @@
                 android:layout_below="@id/date_order"
                 android:layout_marginEnd="3dp"
                 android:layout_marginTop="5dp"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 tool:text="8 items" />
 
         </RelativeLayout>
