--- a/app/src/main/res/layout/each_personil.xml
+++ b/app/src/main/res/layout/each_personil.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="10dp"
     android:minHeight="88dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/avatar"
         android:layout_width="88dp"
         android:layout_height="88dp"
@@ -41,6 +41,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="bottom"
+                    android:textSize="20sp"
                     tools:text="Lutti" />
 
                 <TextView
@@ -50,15 +51,14 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="top"
+                    android:textSize="16sp"
                     tools:text="one" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_gravity="bottom"
-                    android:background="@color/primary_dark"
-
-                    />
+                    android:background="@color/primary_dark" />
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
